| Summary: | ASTERISK-21306: set FEATURE(parkingtime) is not inherited by child channels | ||
| Reporter: | David Cunningham (dcunningham) | Labels: | |
| Date Opened: | 2013-03-21 01:51:37 | Date Closed: | 2013-07-31 16:26:20 |
| Priority: | Major | Regression? | |
| Status: | Closed/Complete | Components: | Applications/app_parkandannounce |
| Versions: | 11.2.1 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | CentOS release 5.8 32 bit | Attachments: | |
| Description: | If you set FEATURE(parkingtime), it doesn't appear to be inherited by child channels.
It you try using "__FEATURE(parkingtime)" it gives an error that "Function __FEATURE not registered". Please let us know if you need more information. | ||
| Comments: | By: Russell Bryant (russell) 2013-03-21 10:18:37.100-0500 This is indeed the way this feature was written. I don't think we would want it to *always* be inherited. Optional inheritance turned on by a flag or something seems like a reasonable enhancement, though. By: Richard Mudgett (rmudgett) 2013-03-21 11:01:12.268-0500 Functions are *not* channel variables. By: Russell Bryant (russell) 2013-03-21 11:40:23.120-0500 Sure, but this is implemented as a datastore underneath, which could be inherited if that was the desired behavior. By: David Cunningham (dcunningham) 2013-03-21 21:48:07.442-0500 This would be a good enhancement. For now we will work around it in extensions.conf. Thanks. By: Russell Bryant (russell) 2013-03-25 21:41:45.639-0500 Patch in progress here: https://reviewboard.asterisk.org/r/2415/ By: David Cunningham (dcunningham) 2013-03-25 22:26:50.972-0500 Hi Russell, That looks great. What version of Asterisk will it go in? By: Matt Jordan (mjordan) 2013-03-26 07:18:38.225-0500 Just curious, why not use a pre-dial routine to set the FEATURE on the child channel at the time of its creation? https://wiki.asterisk.org/wiki/display/AST/Pre-Dial+Handlers By: Russell Bryant (russell) 2013-03-26 08:11:00.367-0500 Indeed, that works, at least for the simpler cases. Some downsides .. 1) pre-dial routines result in a more complex dialplan 2) pre-dial routines only work for Dial() and FollowMe() This is just a more brute force single-line addition to an extension that says "inherit this stuff forever". | ||